--- a/members.html
+++ b/members.html
@@ -121,10 +121,10 @@
 <br>
           </div>
           <div class="col">
-            <div class="card border-dark mb-2 " style="width: 100%;">
+            <div class="card border-dark mb-2 " style="width: 100%; height: 30%;">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="Images/egov2-removebg-preview.png" style="width: 70%; height: 135px;" class="img-fluid rounded-start" alt="...">
+                  <img src="Images/egov2-removebg-preview.png" style="width: 70%; height: 100%;" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
@@ -141,12 +141,12 @@
 
             <div class="card border-dark mb-2" style="max-width: 100%;">
               <div class="row g-0">
-                <div class="col-md-4">
-                  <img src="..." class="img-fluid rounded-start" alt="...">
+                <div class="col-md-4"><br>
+                  <img src="Images/flow.png" class="img-fluid rounded-start" alt="..." width="120%" height="150%">
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Flow</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     
                   </div>
