background image changes

--- a/about.html
+++ b/about.html
@@ -59,12 +59,12 @@
               </div>
               <div class="col mt-2 mb-2">
                 <a button class="btn btn-dark me-1 mb-1" type="button" href="register.html">REGISTER</button></a>
-                    </div>
+                    </div>       
             </div>
       </div>
     </div>
 
-    <div class="container-land" style="background-image: url(Images/about-bg2.jpg); width: 100%">
+    <div class="container-land-about" style="background-image: url(Images/abstract-geometric-background-shapes-texture.jpg); width: 100%">
         <br>
     <p><strong>ABOUT</strong></p>
     <br>
@@ -76,14 +76,17 @@
 <div class="flex-container-left-abt">
   
     <br><br>
-    <h3 style="color: white;"><br>Internet Exchange Points are places at which local Internet Service Providers exchange Internet traffic 
+    <h3 style="color: white;">Internet Exchange Points are places at which local Internet Service Providers exchange Internet traffic 
       between their networks and are critical to the overall health of the Internet. These networks are uniquely described as Autonomous 
       Systems and are identified by autonomous system numbers (ASNs) and IXPs typically require that entities seeking to participate at 
       the IXP possess such a number before joining. </h4><br>
   </div>
-  </div>
-  </div>
-  <div class="flex-container-left-abt">
+  
+ </div>
+
+</div>
+
+  <div class="flex-container-left-text-abt">
   
   <div class="row justify-content-around">
         
@@ -207,7 +210,7 @@
 
 </div>
 <br>
-<div class="flex-container-left-abt" style="background-image: conic-gradient(rgb(255, 255, 255) 112deg, rgb(255, 255, 148) 40deg, rgb(255, 255, 255) 270deg);">
+<div class="flex-container-left-text-abt2" style="background-image: conic-gradient(rgb(255, 255, 255) 112deg, rgb(255, 255, 148) 40deg, rgb(255, 255, 255) 270deg);">
   <div class="row justify-content-around"  >
         
       <div class="col-4">
@@ -230,7 +233,7 @@
   </div>
   </div>
 <br>
-<div class="flex-container-left-abt3" >
+<div class="flex-container-left-abt3" style="font-size: 17px;">
   <p>Through the efforts of the working group, the establishment of the IXP moved forward and a venue was selected for the hosting of the IXP. The site selected 
     was eGov Jamaica Ltd and where the IXP is presently housed.</p>
 </div>
