--- a/statistics.html
+++ b/statistics.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
 
-                <div class="container-main">
+                <div class="container-land-cards">
                     <div class="main-margin">
 <br><br>
                         <div class="container text-center">
