--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     
 </div>
 </div>
-<div class="container-land" style="background-image: url(Images/index-3.jpg);">
+<div class="container-land" style="background-image: url(Images/index-sem.jpg);">
     <br>
 <p><strong>INTERNET EXCHANGE POINT</strong></p>
 <br>
