--- a/members.html
+++ b/members.html
@@ -201,16 +201,16 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               
-                <p style="color:#ffffff">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Sed nec neque eu sem efficitur eleifend. Vestibulum auctor <br>metus id enim faucibus, a luctus metus interdum.
+                <p style="color:#ffffff">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec neque eu sem efficitur eleifend. Vestibulum auctor <br>metus id enim faucibus, a luctus metus interdum.
 
                 <br><em>~Author</em></p>
             </div>
             <div class="carousel-item">
-              <p style="color:#ffffff">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Sed nec neque eu sem efficitur eleifend. Vestibulum auctor <br>metus id enim faucibus, a luctus metus interdum
+              <p style="color:#ffffff">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec neque eu sem efficitur eleifend. Vestibulum auctor <br>metus id enim faucibus, a luctus metus interdum
 
                 <em>~Author</em></p>
             </div>
-            <div class="carousel-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Sed nec neque eu sem efficitur eleifend. Vestibulum auctor <br>metus id enim faucibus, a luctus metus interdum.
+            <div class="carousel-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec neque eu sem efficitur eleifend. Vestibulum auctor <br>metus id enim faucibus, a luctus metus interdum.
                 <em>~Author</em></p>
             </div>
           </div>
