--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                 </div>
               
               <div class="col">
-              <iframe width="90%" height="80%" src="https://www.youtube.com/embed/cpAUedhcjAY?controls=1&&autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            </div>
-          </div> 
+              <iframe width="100%" height="100%" src="https://www.youtube.com/embed/cpAUedhcjAY?controls=1&&autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            </div>
+          </div> <br>
             
         </div>
         <br>
