--- a/register.html
+++ b/register.html
@@ -21,9 +21,9 @@
           <div class="flex-container">
             <div class="align-items-center">
               <div class="main-header">
-                <div class="main-header">
+                
                   <a style="text-decoration: none; color: black;" href="index.html"><p><strong><span style="color: rgb(0, 119, 73)">I</span>nternet <span style="color: rgb(0, 119, 73)">e</span><span style="color: rgb(251, 235, 1)">X</span><span style="color: rgb(0, 119, 73)">change</span> P<span style="color: rgb(251, 235, 1)">oint</span></strong></p></a>
-                </div>                </div>
+                                </div>
             </div>
         </div>
         <div style="background-color:rgb(251, 235, 1)">
