--- a/members.html
+++ b/members.html
@@ -191,7 +191,7 @@
 <div class="black-bg">
 <div class="container-main">
     <div class="flex-container">
-        <div class="black-b">
+        <div class="black-b2">
             
 
       <br> <br>
