--- a/faqs.html
+++ b/faqs.html
@@ -13,7 +13,7 @@
   </script>
 </head>
 <body>
-    <div class="main-margin2 " >
+    <div class="main-margin" >
         <div class="flex-container">
           <div class="align-items-center">
             <div class="main-header">
@@ -32,8 +32,8 @@
               </button>
               <div class="collapse navbar-collapse me-auto" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-4 me-4" >
-                        <a class="nav-link ms-4 me-5"  href="index.html"><strong>Home</strong></a>
-                        <a class="nav-link ms-4 me-5"  href="about.html"><strong>About</strong></a>
+                        <a class="nav-link ms-4 me-5" href="index.html"><strong>Home</strong></a>
+                        <a class="nav-link ms-4 me-5" href="about.html"><strong>About</strong></a>
                         <a class="nav-link ms-4 me-5" href="services.html"><strong>Services</strong></a>
                         <a class="nav-link ms-4 me-5" href="members.html"><strong>Members</strong></a>
                         <a class="nav-link ms-4 me-5" href="statistics.html"><strong>Statistics</strong></a>
