--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
           </button>
           <div class="collapse navbar-collapse me-auto" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-4 me-4" >
-              <a class="nav-link active ms-4 me-5" aria-current="page" href="index.html"><strong>Home</strong></a>
-              <a class="nav-link ms-4 me-5" href="about.html"><strong>About</strong></a>
+              <a class="nav-link ms-4 me-5" href="index.html"><strong>Home</strong></a>
+              <a class="nav-link active ms-4 me-5" aria-current="page" href="about.html"><strong>About</strong></a>
               <a class="nav-link ms-4 me-5" href="services.html"><strong>Services</strong></a>
               <a class="nav-link ms-4 me-5" href="members.html"><strong>Members</strong></a>
               <a class="nav-link ms-4 me-5" href="statistics.html"><strong>Statistics</strong></a>
