--- a/services.html
+++ b/services.html
@@ -311,7 +311,7 @@
 
 <footer class="footer">
   <div class="column">
-    <h3>JAMAICA INTERNET EXCHANGE POINT SUMMARY</h3>
+    <h3>JAMAICA INTERNET EXCHANGE POINT </h3><br>
     <p>An Internet Exchange Point (IXP) is a physical infrastructure that enables direct exchange of 
       Internet traffic between networks, improving network performance and reducing costs by 
       eliminating the need for data to travel through multiple intermediate networks.
@@ -335,6 +335,11 @@
     <p>Address: 123 Street, City, Country</p>
   </div>
   
+  
+  
 </footer>
+
+
+
 
 </html>
