--- a/register.html
+++ b/register.html
@@ -311,7 +311,7 @@
         </div>
 
         <div class="container-land3" style="background-image: url(Images/bg-reg.jpeg); width: 100%">
-          <strong style="font-size: 185%; word-wrap: break-word;">REGISTER WITH US!</strong> <hr>
+          <strong style="font-size: 185%; word-wrap: break-word; color: #4835d4;">REGISTER WITH US!</strong> <hr>
         </div>
 
 <br>
