Card and video play updates

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                 <br>
                 </div>
               
-              <div class="col">
-              <iframe width="100%" height="100%" src="https://www.youtube.com/embed/cpAUedhcjAY?controls=1&&autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            </div>
+              <div class="col"><br>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/cpAUedhcjAY?controls=1&autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            </div>
           </div> <br>
             
         </div>
@@ -128,6 +128,7 @@
           <h5 class="card-title"></h5>
           <p class="card-text" style="text-align: left;">
             <p>Increase Routing Efficency and Fault Tolerance</p>
+            <p>Increased Autonomy</p>
             <p>Redundancy</p>
             <p>Reliability</p>
           </p>
@@ -144,6 +145,7 @@
             <p>Cost Reduction</p>
             <p>Latency Speed and Bandwith Improvements</p>
             <p>Control and Authority</p>
+            <p>Ease of Access</p>
           </p>
           <a button class="btn btn-success me-1 mb-1" type="button" href="about.html">Read More</button></a>
         </div>
