--- a/register.html
+++ b/register.html
@@ -370,7 +370,7 @@
        
       <div class="container-reg-upload">
         <button >
-        <a href="Files\JAIXP Application Form v1.1 03082016.docx" download>Download File</a>
+        <a href="Files\JAIXP Application Form.pdf" download>Download File</a>
           </button>
         <br><br>
 </div>
