--- a/news.html
+++ b/news.html
@@ -62,7 +62,7 @@
                      <img src="Images/Telephone.png"> +1 876-###-####
                     </div>
                     <div class="col mt-2 mb-2">
-                      <a button class="btn btn-dark me-1 mb-1" type="button" href="register.html">REGISTER</button></a>
+                      <a button class="btn btn-dark me-1 mb-1" type="button" href="register.php">REGISTER</button></a>
                           </div>
                   </div>
             </div>
