--- a/services.html
+++ b/services.html
@@ -56,7 +56,7 @@
                <img src="Images/Telephone.png"> +1 876-###-####
               </div>
               <div class="col mt-2 mb-2">
-                <a button class="btn btn-warning me-1 mb-1" type="button" href="register.html">REGISTER</button></a>
+                <a button class="btn btn-warning me-1 mb-1" type="button" href="register.php">REGISTER</button></a>
                     </div>
             </div>
       </div>
@@ -329,11 +329,14 @@
       <li><a href="faqs.html">FAQs</a></li>
     </ul>
   </div>
+
+
+  
   <div class="column">
     <h3>Contact Information</h3>
-    <p>Phone: 123-456-7890</p>
     <p>Email: jaixp@our.org.jm</p>
-    <p>Address: 123 Street, City, Country</p>
+    <p>Address: 235B Old Hope Road ,Kingston, Jamaica</p>
+    <p>Managed by:	Jamaican Office of Utilities Regulation</p>
   </div>
   
   
