--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
               <div class="container text-center">
                 <div class="row">
                   <div class="col mt-2 mb-2">
-                   <a button class="btn btn-warning me-1 mb-1" type="button" href="register.php">REGISTER</button></a>
+                   <a button class="btn btn-warning me-1 mb-1" type="button" href="register.html">REGISTER</button></a>
                   </div>
                   
                 </div>
