test register page

--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     
-    <script src="regval.js" defer></script>
+    <script defer src="regval.js" ></script>
     
       </head>
   <body>
