--- a/regtest.html
+++ b/regtest.html
@@ -109,24 +109,30 @@
         <form action="#">
             <div class="form first">
                 <div class="details personal">
-                    <span class="title">Personal Details</span>
+                    <span class="title">Organization Details</span>
                     <div class="fields">
                         <div class="input-field">
-                            <label>Full Name</label>
-                            <input type="text" placeholder="Enter your name" required>
+                            <label>Organization Name</label>
+                            <input type="text" placeholder="Enter your Organization name" required>
                         </div>
                         <div class="input-field">
-                            <label>Date of Birth</label>
-                            <input type="date" placeholder="Enter birth date" required>
+                            <label>Organization Website</label>
+                            <input type="text" placeholder="Enter Organization Website" required>
                         </div>
                         <div class="input-field">
-                            <label>Email</label>
-                            <input type="text" placeholder="Enter your email" required>
+                            <label>Organization Email</label>
+                            <input type="text" placeholder="Enter your Organization Email" required>
                         </div>
                         <div class="input-field">
-                            <label>Mobile Number</label>
-                            <input type="number" placeholder="Enter mobile number" required>
+                            <label>Telephone Number</label>
+                            <input type="number" placeholder="Enter Organization Telephone Number" required>
                         </div>
+                        <div class="input-field">
+                            <label>Orgnization TRN</label>
+                            <input type="text" placeholder="Enter Organization TRN" required>
+                        </div>
+
+                        <!--
                         <div class="input-field">
                             <label>Gender</label>
                             <select required>
@@ -136,40 +142,82 @@
                                 <option>Others</option>
                             </select>
                         </div>
+                    -->
+
+
                         <div class="input-field">
-                            <label>Occupation</label>
-                            <input type="text" placeholder="Enter your ccupation" required>
+                            <label>Organization Registration Number</label>
+                            <input type="text" placeholder="Enter Orgnization Registration No." required>
                         </div>
                     </div>
                 </div>
                 <div class="details ID">
-                    <span class="title">Identity Details</span>
+                    <span class="title"></span>
                     <div class="fields">
                         <div class="input-field">
-                            <label>ID Type</label>
-                            <input type="text" placeholder="Enter ID type" required>
+                            <label>Registered Address</label>
+                            <input type="text" placeholder="Enter Registered Address" required>
                         </div>
                         <div class="input-field">
-                            <label>ID Number</label>
-                            <input type="number" placeholder="Enter ID number" required>
+                            <label>City</label>
+                            <input type="text" placeholder="Enter City" required>
                         </div>
                         <div class="input-field">
-                            <label>Issued Authority</label>
-                            <input type="text" placeholder="Enter issued authority" required>
+                            <label>Parish/State</label>
+                            <input type="text" placeholder="Enter Parish/State" required>
                         </div>
                         <div class="input-field">
-                            <label>Issued State</label>
-                            <input type="text" placeholder="Enter issued state" required>
+                            <label>Contact Person:</label>
+                            <input type="text" placeholder="Enter Contact Person" required>
                         </div>
                         <div class="input-field">
-                            <label>Issued Date</label>
-                            <input type="date" placeholder="Enter your issued date" required>
+                            <label>Email</label>
+                            <input type="text" placeholder="Enter Contact Person Email" required>
                         </div>
                         <div class="input-field">
-                            <label>Expiry Date</label>
-                            <input type="date" placeholder="Enter expiry date" required>
+                            <label>Telephone Number</label>
+                            <input type="number" placeholder="Enter Contact Person Telephone" required>
                         </div>
+                        <div class="input-field">
+                            <label>Postal Address</label>
+                            <input type="text" placeholder="Enter Postal Address" required>
+                        </div>
+                        <div class="input-field">
+                            <label>City</label>
+                            <input type="number" placeholder="Enter City" required>
+                        </div>
+                        <div class="input-field">
+                            <label>Parish/State</label>
+                            <input type="text" placeholder="Enter Parish/State" required>
+                        </div>
+
+                        <div class="input-field3">
+                            <label>Description of Organization</label>
+                            <select required>
+                                <option disabled selected>Select Organization Descrition</option>
+                                <option>Content Delivery Network</option>
+                                <option>Educational Institution</option>
+                                <option>Content Provider</option>
+                                <option>Enterprise</option>
+                                <option>Cloud/SaaS Provider</option>
+                                <option>ISP</option>
+                                <option>Hosting Provider</option>
+                                <option>Other</option>
+                                
+                            </select>
+                        </div>
+                       
+
                     </div>
+                    <br><br>
+                    <div class="input-field2">
+                        <label>(Please provide additional information on your organization which may be used on our website under the “Peers” Section):
+                        </label>
+                        <input type="text" placeholder="Enter Parish/State" required>
+                    </div>
+
+
+
                     <button class="nextBtn">
                         <span class="btnText">Next</span>
                         <i class="uil uil-navigator"></i>
