--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </div>
 <div class="container-land" style="background-image: url(Images/index-test.jpg);">
     <br>
-<p><strong>INTERNET E POINT</strong></p>
+<p><strong>INTERNET EXCHANGE POINT</strong></p>
 <br>
 </div>
 
