--- a/faqs.html
+++ b/faqs.html
@@ -37,7 +37,7 @@
                         <a class="nav-link ms-4 me-5" href="services.html"><strong>Services</strong></a>
                         <a class="nav-link ms-4 me-5" href="members.html"><strong>Members</strong></a>
                         <a class="nav-link ms-4 me-5" href="statistics.html"><strong>Statistics</strong></a>
-                        <a class="nav-link ms-4 me-5" href="news.html"><strong>News</strong></a>
+                        <a class="nav-link ms-4 me-5" href="resources.html"><strong>resources.html</strong></a>
                         <a class="nav-link ms-4 me-5" href="contact.html"><strong>Contact Us</strong></a>
                    
                 </div>
