--- a/services.html
+++ b/services.html
@@ -37,7 +37,7 @@
                       <a class="nav-link active ms-4 me-5" aria-current="page" href="services.html" style="color: white;"><strong>Services</strong></a>
                       <a class="nav-link ms-4 me-5" href="members.html" style="color: white;"><strong>Members</strong></a>
                       <a class="nav-link ms-4 me-5" href="statistics.html" style="color: white;"><strong>Statistics</strong></a>
-                      <a class="nav-link ms-4 me-5" href="news.html" style="color: white;"><strong>News</strong></a>
+                      <a class="nav-link ms-4 me-5" href="resources.html" style="color: white;"><strong>Resources</strong></a>
                       <a class="nav-link ms-4 me-5" href="contact.html" style="color: white;"><strong>Contact Us</strong></a>
                        
                     </div>
