Font size adjustments

--- a/about.html
+++ b/about.html
@@ -256,19 +256,19 @@
   <div class="row justify-content-around"  >
         
       <div class="col-4">
-      <p>The GOJ as part of its policy ICT policy made it a key priority that the nation should have island wide ICT infrastructure that facilitates 
+      <p style="font-size: 20px;">The GOJ as part of its policy ICT policy made it a key priority that the nation should have island wide ICT infrastructure that facilitates 
         greater access to high capacity networks with interconnection to international networks. They further went on state that as a part of the 
         strategies to accomplish this was to establish a National Internet Exchange Point in Jamaica.  </p>
        <br>
-       <p>In addition to this there were key national initiatives underway, including the establishment of a Jamaican logistics hub, which would be 
+       <p style="font-size: 20px;">In addition to this there were key national initiatives underway, including the establishment of a Jamaican logistics hub, which would be 
         helped by the presence of a local IXP that will be able to handle greater volumes of data that would be generated within the island as a result 
         of these initiatives. </p>
     </div>
     <div class="col-4">
-      <p>With the strategic objectives of the GOJ in mind, the Office of Utilities Regulation (OUR) set about the task of bringing key stakeholders together 
+      <p style="font-size: 20px;">With the strategic objectives of the GOJ in mind, the Office of Utilities Regulation (OUR) set about the task of bringing key stakeholders together 
         with the hosting of the Jamaican Internet Exchange Point Symposium in collaboration with the Caribbean Telecommunications Union and Packet Clearing House, 
         the world’s leading implementer of Internet Exchange Points.</p><br>
-      <p>The symposium brought together members of academia, Internet Service Providers (ISPs), content houses and other interested parties. From the 
+      <p style="font-size: 20px;">The symposium brought together members of academia, Internet Service Providers (ISPs), content houses and other interested parties. From the 
         symposium the OUR, as facilitator of the IXP implementation process, was able to assemble a working group drawn from the gathering to establish the 
         facility and move the process forward.  </p>
     </div>
@@ -276,7 +276,7 @@
   </div>
 <br>
 <div class="flex-container-left-abt3" style="font-size: 17px;">
-  <p>Through the efforts of the working group, the establishment of the IXP moved forward and a venue was selected for the hosting of the IXP. The site selected 
+  <p style="font-size: 20px;">Through the efforts of the working group, the establishment of the IXP moved forward and a venue was selected for the hosting of the IXP. The site selected 
     was eGov Jamaica Ltd and where the IXP is presently housed.</p>
 </div>
 </div>
